(ocamllex (modules bc_lexer))
(ocamlyacc (modules bc_parser))

(library
 (name bc_front)
 (public_name baccaml.bc_front)
 (modules bc_front bc_parser bc_lexer sub))

(library
 (name        bc_lib)
 (public_name baccaml.lib)
 (libraries jit base bc_front)
 (modules bc_lib))

(executable
 (name        baccaml)
 (modules     baccaml)
 (libraries str base jit bc_lib))

(executable
 (name        baccaml_builder)
 (modules     baccaml_builder)
 (libraries   base jit bc_lib))
