(ocamllex (modules lexer))
(ocamlyacc (modules parser))

(library
 (name bytegen_lib)
 (public_name baccaml.bytegen_lib)
 (modules :standard \ bytegen)
 (preprocess (pps ppx_deriving.show)))

(executable
 (name bytegen)
 (modules bytegen)
 (public_name baccaml.bytegen)
 (libraries bytegen_lib)
 (preprocess (pps ppx_deriving.show)))
