(ocamllex (modules lexer))
(ocamlyacc (modules parser))

(library
 (name bytegen_lib)
 (public_name baccaml.bytegen_lib)
 (modules :standard \ bytegen)
 (inline_tests)
 (libraries str)
 (preprocess (pps ppx_deriving.show ppx_inline_test)))

(executable
 (name bytegen)
 (modules bytegen)
 (public_name bytegen)
 (libraries bytegen_lib)
 (preprocess (pps ppx_deriving.show ppx_inline_test)))
