(executable
 (name jit_entry)
 (modules jit_entry)
 (libraries jit)
 (modes
  (native exe)
  (native object)
  (native shared_object)))

(rule
 (targets test_interp_tj.s)
 (deps test_interp.mcml)
 (action (run ../bin/min_caml.exe -o %{targets} %{deps} -type tjit -no-hint)))

(rule
 (targets test_interp_mj.s)
 (deps test_interp.mcml)
 (action (run ../bin/min_caml.exe -o %{targets} %{deps} -type mjit -no-hint)))

(rule
 (targets interp_tj.s)
 (deps interp.mcml)
 (action (run ../bin/min_caml.exe -o %{targets} %{deps} -type tjit -no-hint)))

(rule
 (targets interp_mj.s)
 (deps interp.mcml)
 (action (run ../bin/min_caml.exe -o %{targets} %{deps} -type mjit -no-hint)))

(rule
 (targets test_interp_tj.exe)
 (deps
   jit_entry.exe%{ext_obj}
   ../jit/stub.c
   ../jit/interop.c
   ../jit/libmincaml.S
   test_interp_tj.s)
 (action
  (run %{cc} -g -m32 -rdynamic -o %{targets} -I %{ocaml_where} -L %{ocaml_where} -I . %{deps}
    %{ocaml-config:native_c_libraries})))

(rule
 (targets test_interp_mj.exe)
 (deps
   jit_entry.exe%{ext_obj}
   ../jit/stub.c
   ../jit/interop.c
   ../jit/libmincaml.S
   test_interp_mj.s)
 (action
  (run %{cc} -g -m32 -rdynamic -o %{targets} -I %{ocaml_where} -L %{ocaml_where} -I . %{deps}
    %{ocaml-config:native_c_libraries})))

(rule
 (targets interp_tj.exe)
 (deps
   jit_entry.exe%{ext_obj}
   ../jit/stub.c
   ../jit/interop.c
   ../jit/libmincaml.S
   interp_tj.s)
 (action
  (run %{cc} -g -m32 -rdynamic -o %{targets} -I %{ocaml_where} -L %{ocaml_where} -I . %{deps}
    %{ocaml-config:native_c_libraries})))

(rule
 (targets interp_mj.exe)
 (deps
   jit_entry.exe%{ext_obj}
   ../jit/stub.c
   ../jit/interop.c
   ../jit/libmincaml.S
   interp_mj.s)
 (action
  (run %{cc} -g -m32 -rdynamic -o %{targets} -I %{ocaml_where} -L %{ocaml_where} -I . %{deps}
    %{ocaml-config:native_c_libraries})))

(alias
 (name runtest)
 (deps test_interp.mcml)
 (action (run ./test_interp_tj.exe %{deps})))

(alias
 (name runtest)
 (deps test_interp.mcml)
 (action (run ./test_interp_mj.exe %{deps})))
