(executable
 (name jit_entry)
 (modules jit_entry)
 (libraries runtime jit unix)
 (modes
  (native exe)
  (native object)
  (native shared_object)))

(rule
 (deps interp.mcml)
 (targets interp_tj.s interp_mj.s)
 (action
  (progn
   (run ../bin/min_caml.exe -o interp_mj.s %{deps} -type mjit -no-hint)
   (run ../bin/min_caml.exe -o interp_tj.s %{deps} -type tjit -no-hint))))

(rule
 (deps interp_sieve.mcml)
 (targets interp_sieve_tj.s interp_sieve_mj.s)
 (action
  (progn
   (run ../bin/min_caml.exe -o interp_sieve_mj.s %{deps} -type mjit -no-hint)
   (run ../bin/min_caml.exe -o interp_sieve_tj.s %{deps} -type tjit -no-hint))))

(rule
 (deps test_interp.mcml)
 (targets test_interp_tj.s test_interp_mj.s)
 (action
  (progn
    (run ../bin/min_caml.exe -o test_interp_mj.s %{deps} -type mjit -no-hint)
    (run ../bin/min_caml.exe -o test_interp_tj.s %{deps} -type tjit -no-hint))))

(rule (targets test_interp_tj.exe)
 (deps jit_entry.exe%{ext_obj} ../stub/stub.c ../runtime/interop.c ../stub/libmincaml.S test_interp_tj.s)
 (action
  (run %{cc} -g -m32 -rdynamic -o %{targets} -I %{ocaml_where} -L
       %{ocaml_where} -I . %{deps} %{ocaml-config:native_c_libraries})))

(rule (targets test_interp_mj.exe)
 (deps jit_entry.exe%{ext_obj} ../stub/stub.c ../runtime/interop.c ../stub/libmincaml.S test_interp_mj.s)
 (action
  (run %{cc} -g -m32 -rdynamic -o %{targets} -I %{ocaml_where} -L
       %{ocaml_where} -I . %{deps} %{ocaml-config:native_c_libraries})))

(rule (targets interp_tj.exe)
 (deps jit_entry.exe%{ext_obj} ../stub/stub.c ../runtime/interop.c ../stub/libmincaml.S interp_tj.s)
 (action
  (bash
    "\
    \n%{cc} -g -rdynamic -o %{targets} -I %{ocaml_where} -L /usr/lib32 \
            -L %{ocaml_where} -I. %{deps} %{ocaml-config:native_c_libraries}")))

(rule (targets interp_mj.exe)
 (deps jit_entry.exe%{ext_obj} ../stub/stub.c ../runtime/interop.c ../stub/libmincaml.S interp_mj.s)
 (action
  (bash
    "\
    \n%{cc} -g -rdynamic -o %{targets} -I %{ocaml_where} -L /usr/lib32 \
            -L %{ocaml_where} -I. %{deps} %{ocaml-config:native_c_libraries}")))

(rule (targets interp_sieve_tj.exe)
 (deps jit_entry.exe%{ext_obj} ../stub/stub.c ../runtime/interop.c ../stub/libmincaml.S interp_sieve_tj.s)
 (action
  (bash
    "\
    \n%{cc} -g -rdynamic -o %{targets} -I %{ocaml_where} -L /usr/lib32 \
            -L %{ocaml_where} -I. %{deps} %{ocaml-config:native_c_libraries}")))
