(executable
 (name jit_entry)
 (modules jit_entry)
 (libraries runtime jit unix)
 (modes
  (native exe)
  (native object)
  (native shared_object)))

(rule
 (deps interp.mcml)
 (targets interp_tj.s interp_mj.s)
 (action
  (progn
   (run ../bin/min_caml.exe -o interp_mj.s %{deps} -type mjit -no-hint)
   (run ../bin/min_caml.exe -o interp_tj.s %{deps} -type tjit -no-hint))))

(rule (targets interp_tj.exe)
 (deps
   jit_entry.exe%{ext_obj}
   ../runtime/main.c
   ../runtime/interop_caml.c
   ../runtime/runtime_camlwrap.c
   ../runtime/runtime.c
   ../runtime/libmincaml.S
   interp_tj.s)
 (action
  (run %{cc} -g -m32 -rdynamic -o %{targets} -I %{ocaml_where}
    -L %{ocaml_where} -I . %{deps} %{ocaml-config:native_c_libraries})))

(rule (targets interp_mj.exe)
 (deps
   jit_entry.exe%{ext_obj}
   ../runtime/main.c
   ../runtime/interop_caml.c
   ../runtime/runtime_camlwrap.c
   ../runtime/runtime.c
   ../runtime/libmincaml.S
   interp_mj.s)
 (action
  (run %{cc} -g -m32 -rdynamic -o %{targets} -I %{ocaml_where}
       -L %{ocaml_where} -I . %{deps} %{ocaml-config:native_c_libraries})))
