(library
 (name interp_util)
 (modules Interp_util)
 (flags (-w -4-33-40-41-42-43-34-44
         -g
         -short-paths
         -strict-sequence
         -strict-formats
         -short-paths
         -keep-locs)))

(test
 (name interp_tlbc)
 (modules interp_tlbc)
 (flags (-w -4-33-40-41-42-43-34-44
         -g
         -short-paths
         -strict-sequence
         -strict-formats
         -short-paths
         -keep-locs))
 (libraries str oUnit utils base jit interp_util))

(test
 (name test_sif)
 (modules test_sif)
 (libraries str oUnit base))
