(ocamllex (modules lexer))
(ocamlyacc (modules parser))

; (menhir ((modules (parser))))

(library
 (name           minCaml)
 (public_name    baccaml.base)
 (modules        (:standard \ anchor))
 (flags          (-w -4-33-40-41))
 (libraries      str core logs stringext corext)
 (c_names        float)
 (preprocess     (pps ppx_deriving.show)))