(ocamllex (modules lexer))
(ocamlyacc (modules parser))

; (menhir ((modules (parser))))

(library
 (name           minCaml)
 (public_name    baccaml.minCaml)
 (modules        (:standard \ min_caml anchor))
 (flags          (-w -4-33-40-41))
 (libraries      str core logs)
 (c_names        float)
 (preprocess     (pps ppx_deriving.show)))

(executable
 (name           min_caml)
 (public_name    baccaml.min_caml)
 (flags          (-w -4-33-40-41))
 (modules        Min_caml)
 (libraries      core minCaml))
