(rule
 (targets interp_sh_tj.s)
 (deps interp_sh.mcml)
 (action
  (run ../../bin/min_caml.exe -type tjit %{deps} -o %{targets})))

(rule
 (targets interp_sh_tj.exe)
 (deps interp_sh_tj.s
       stub.c
       libmincaml.S)
 (action
  (run %{cc} -g -m32 -rdynamic -o %{targets} -I %{ocaml_where}
    -L %{ocaml_where} -I . %{deps} %{ocaml-config:native_c_libraries} -lm)))

;(alias
; (name runtest)
; (deps interp_sh.mcml)
; (action
;  (run ./interp_sh_tj.exe)))
